--- a/2) Python Strings Medical Insurance Project/Python Strings Medical Insurance/Python Strings Medical Insurance.ipynb
+++ b/2) Python Strings Medical Insurance Project/Python Strings Medical Insurance/Python Strings Medical Insurance.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "98d79856",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:09.322618Z",
-     "start_time": "2024-04-09T10:16:09.316377Z"
+     "end_time": "2024-04-11T16:59:14.174142Z",
+     "start_time": "2024-04-11T16:59:14.167815Z"
     }
    },
    "outputs": [],
@@ -95,12 +95,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:10.034300Z",
-     "start_time": "2024-04-09T10:16:10.028359Z"
+     "end_time": "2024-04-11T16:59:14.412811Z",
+     "start_time": "2024-04-11T16:59:14.406027Z"
     }
    },
    "id": "c00b0d5ad89c3911",
-   "execution_count": 20
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -116,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "0fafcc50",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:11.297813Z",
-     "start_time": "2024-04-09T10:16:11.290652Z"
+     "end_time": "2024-04-11T16:59:14.446254Z",
+     "start_time": "2024-04-11T16:59:14.441288Z"
     }
    },
    "outputs": [
@@ -161,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "9da8e807",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:12.270276Z",
-     "start_time": "2024-04-09T10:16:12.265154Z"
+     "end_time": "2024-04-11T16:59:14.493531Z",
+     "start_time": "2024-04-11T16:59:14.488709Z"
     }
    },
    "outputs": [],
@@ -184,12 +184,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "7d5aaabf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:13.228910Z",
-     "start_time": "2024-04-09T10:16:13.222204Z"
+     "end_time": "2024-04-11T16:59:14.538868Z",
+     "start_time": "2024-04-11T16:59:14.534280Z"
     }
    },
    "outputs": [],
@@ -214,12 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "6638542f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:14.813880Z",
-     "start_time": "2024-04-09T10:16:14.808369Z"
+     "end_time": "2024-04-11T16:59:14.593789Z",
+     "start_time": "2024-04-11T16:59:14.588172Z"
     }
    },
    "outputs": [
@@ -265,12 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "76cae5e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:22.683536Z",
-     "start_time": "2024-04-09T10:16:22.679300Z"
+     "end_time": "2024-04-11T16:59:14.640950Z",
+     "start_time": "2024-04-11T16:59:14.635787Z"
     }
    },
    "outputs": [
@@ -299,12 +299,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "434ed907",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:28.822789Z",
-     "start_time": "2024-04-09T10:16:28.817454Z"
+     "end_time": "2024-04-11T16:59:14.725282Z",
+     "start_time": "2024-04-11T16:59:14.720037Z"
     }
    },
    "outputs": [],
@@ -324,12 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "d57c33b1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:28:59.587751Z",
-     "start_time": "2024-04-09T10:28:59.580506Z"
+     "end_time": "2024-04-11T16:59:14.755262Z",
+     "start_time": "2024-04-11T16:59:14.748348Z"
     }
    },
    "outputs": [
@@ -337,7 +337,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Marina Allison   ', '27   ', '   31.1 ', ' \\n$7010.0   '], ['Markus Valdez   ', '   30', ' \\n22.4', '   $4050.0 '], ['Connie Ballard ', '43 \\n', '   25.3 ', ' $12060.0 '], ['Darnell Weber   \\n', '   35   ', ' 20.6   ', ' $7500.0'], ['\\nSylvie Charles   ', '22', ' 22.1 \\n', '$3022.0   '], ['   Vinay Padilla', '24', '   \\n26.9 ', '$4620.0 '], ['Meredith Santiago', ' 51   ', ' \\n29.3 ', '$16330.0'], ['   Andre Mccarty', ' \\n19', '22.7 ', ' $2900.0 '], [' \\nLorena Hodson ', '65', ' 33.1 ', ' $19370.0'], [' \\nIsaac Vu ', '34', ' 24.8', '   $7045.0'], ['Marina Allison   ', '27   ', '   31.1 ', ' \\n$7010.0   '], ['Markus Valdez   ', '   30', ' \\n22.4', '   $4050.0 '], ['Connie Ballard ', '43 \\n', '   25.3 ', ' $12060.0 '], ['Darnell Weber   \\n', '   35   ', ' 20.6   ', ' $7500.0'], ['\\nSylvie Charles   ', '22', ' 22.1 \\n', '$3022.0   '], ['   Vinay Padilla', '24', '   \\n26.9 ', '$4620.0 '], ['Meredith Santiago', ' 51   ', ' \\n29.3 ', '$16330.0'], ['   Andre Mccarty', ' \\n19', '22.7 ', ' $2900.0 '], [' \\nLorena Hodson ', '65', ' 33.1 ', ' $19370.0'], [' \\nIsaac Vu ', '34', ' 24.8', '   $7045.0'], ['Marina Allison   ', '27   ', '   31.1 ', ' \\n$7010.0   '], ['Markus Valdez   ', '   30', ' \\n22.4', '   $4050.0 '], ['Connie Ballard ', '43 \\n', '   25.3 ', ' $12060.0 '], ['Darnell Weber   \\n', '   35   ', ' 20.6   ', ' $7500.0'], ['\\nSylvie Charles   ', '22', ' 22.1 \\n', '$3022.0   '], ['   Vinay Padilla', '24', '   \\n26.9 ', '$4620.0 '], ['Meredith Santiago', ' 51   ', ' \\n29.3 ', '$16330.0'], ['   Andre Mccarty', ' \\n19', '22.7 ', ' $2900.0 '], [' \\nLorena Hodson ', '65', ' 33.1 ', ' $19370.0'], [' \\nIsaac Vu ', '34', ' 24.8', '   $7045.0']]\n"
+      "[['Marina Allison   ', '27   ', '   31.1 ', ' \\n$7010.0   '], ['Markus Valdez   ', '   30', ' \\n22.4', '   $4050.0 '], ['Connie Ballard ', '43 \\n', '   25.3 ', ' $12060.0 '], ['Darnell Weber   \\n', '   35   ', ' 20.6   ', ' $7500.0'], ['\\nSylvie Charles   ', '22', ' 22.1 \\n', '$3022.0   '], ['   Vinay Padilla', '24', '   \\n26.9 ', '$4620.0 '], ['Meredith Santiago', ' 51   ', ' \\n29.3 ', '$16330.0'], ['   Andre Mccarty', ' \\n19', '22.7 ', ' $2900.0 '], [' \\nLorena Hodson ', '65', ' 33.1 ', ' $19370.0'], [' \\nIsaac Vu ', '34', ' 24.8', '   $7045.0']]\n"
      ]
     }
    ],
@@ -367,12 +367,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "fe45e1b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:43:16.307929Z",
-     "start_time": "2024-04-09T10:43:16.302683Z"
+     "end_time": "2024-04-11T16:59:14.857194Z",
+     "start_time": "2024-04-11T16:59:14.850520Z"
     }
    },
    "outputs": [],
@@ -392,21 +392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "1d13c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:44:38.594175Z",
-     "start_time": "2024-04-09T10:44:38.588452Z"
+     "end_time": "2024-04-11T16:59:14.915688Z",
+     "start_time": "2024-04-11T16:59:14.909562Z"
     }
    },
    "outputs": [],
    "source": [
-    "for records in medical_records:\n",
+    "for record in medical_records:\n",
     "    record_clean = []\n",
-    "    for item in records:\n",
-    "        record_clean.append(item.strip())\n",
-    "    medical_records_clean.append(record_clean)\n",
     "    "
    ]
   },
@@ -426,17 +423,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "62c68cf6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:45:06.445014Z",
-     "start_time": "2024-04-09T10:45:06.442041Z"
+     "end_time": "2024-04-11T17:03:01.848663Z",
+     "start_time": "2024-04-11T17:03:01.842862Z"
     }
    },
    "outputs": [],
    "source": [
-    " \n",
+    "for record in medical_records:\n",
+    "    record_clean = []\n",
+    "    for item in record:\n",
+    "        record_clean.append(item.strip())\n",
+    "        \n",
     "        "
    ]
   },
@@ -452,17 +453,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "4ac79cd2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:47:28.253318Z",
-     "start_time": "2024-04-09T10:47:28.245276Z"
+     "end_time": "2024-04-11T17:03:38.508648Z",
+     "start_time": "2024-04-11T17:03:38.501576Z"
     }
    },
    "outputs": [],
    "source": [
-    "medical_records_clean.append(record_clean)"
+    "for record in medical_records:\n",
+    "    record_clean = []\n",
+    "    for item in record:\n",
+    "        record_clean.append(item.strip())\n",
+    "    medical_records_clean.append(record_clean)\n",
+    "\n",
+    "medical_records_clean.append(record_clean)\n"
    ]
   },
   {
@@ -477,12 +484,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "c8ab9356",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:47:47.171609Z",
-     "start_time": "2024-04-09T10:47:47.165683Z"
+     "end_time": "2024-04-11T17:03:45.779170Z",
+     "start_time": "2024-04-11T17:03:45.773460Z"
     }
    },
    "outputs": [
@@ -490,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Isaac Vu', '34', '24.8', '$7045.0']]\n"
+      "[['Isaac Vu', '34', '24.8', '$7045.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0'], ['Isaac Vu', '34', '24.8', '$7045.0']]\n"
      ]
     }
    ],
@@ -524,16 +531,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "3ade320b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:01.994899Z",
-     "start_time": "2024-04-09T10:16:01.990693Z"
+     "end_time": "2024-04-11T17:04:48.420082Z",
+     "start_time": "2024-04-11T17:04:48.414033Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isaac Vu\n",
+      "Isaac Vu\n",
+      "Marina Allison\n",
+      "Markus Valdez\n",
+      "Connie Ballard\n",
+      "Darnell Weber\n",
+      "Sylvie Charles\n",
+      "Vinay Padilla\n",
+      "Meredith Santiago\n",
+      "Andre Mccarty\n",
+      "Lorena Hodson\n",
+      "Isaac Vu\n",
+      "Isaac Vu\n",
+      "Marina Allison\n",
+      "Markus Valdez\n",
+      "Connie Ballard\n",
+      "Darnell Weber\n",
+      "Sylvie Charles\n",
+      "Vinay Padilla\n",
+      "Meredith Santiago\n",
+      "Andre Mccarty\n",
+      "Lorena Hodson\n",
+      "Isaac Vu\n",
+      "Isaac Vu\n"
+     ]
+    }
+   ],
+   "source": [
+    "for record in medical_records_clean:\n",
+    "    print(record[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -549,16 +590,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "ee24f738",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.018326Z",
-     "start_time": "2024-04-09T10:16:02.014319Z"
+     "end_time": "2024-04-11T17:16:12.410335Z",
+     "start_time": "2024-04-11T17:16:12.402256Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ISAAC VU\n",
+      "ISAAC VU\n",
+      "MARINA ALLISON\n",
+      "MARKUS VALDEZ\n",
+      "CONNIE BALLARD\n",
+      "DARNELL WEBER\n",
+      "SYLVIE CHARLES\n",
+      "VINAY PADILLA\n",
+      "MEREDITH SANTIAGO\n",
+      "ANDRE MCCARTY\n",
+      "LORENA HODSON\n",
+      "ISAAC VU\n",
+      "ISAAC VU\n",
+      "MARINA ALLISON\n",
+      "MARKUS VALDEZ\n",
+      "CONNIE BALLARD\n",
+      "DARNELL WEBER\n",
+      "SYLVIE CHARLES\n",
+      "VINAY PADILLA\n",
+      "MEREDITH SANTIAGO\n",
+      "ANDRE MCCARTY\n",
+      "LORENA HODSON\n",
+      "ISAAC VU\n",
+      "ISAAC VU\n"
+     ]
+    }
+   ],
+   "source": [
+    "for record in medical_records_clean:\n",
+    "    record_upper = record[0].upper()\n",
+    "    print(record_upper)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -576,16 +652,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "e77b8028",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.072791Z",
-     "start_time": "2024-04-09T10:16:02.068760Z"
+     "end_time": "2024-04-11T17:18:42.858947Z",
+     "start_time": "2024-04-11T17:18:42.851546Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "names = []\n",
+    "ages = []\n",
+    "bmis = []\n",
+    "insurance_costs = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -601,12 +682,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "2e370347",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.095693Z",
-     "start_time": "2024-04-09T10:16:02.091725Z"
+     "end_time": "2024-04-11T16:59:15.339368Z",
+     "start_time": "2024-04-11T16:59:15.335607Z"
     }
    },
    "outputs": [],
@@ -624,12 +705,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "72fd0613",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.150744Z",
-     "start_time": "2024-04-09T10:16:02.146131Z"
+     "end_time": "2024-04-11T16:59:15.370743Z",
+     "start_time": "2024-04-11T16:59:15.366545Z"
     }
    },
    "outputs": [],
@@ -647,12 +728,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "303e90dd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.167518Z",
-     "start_time": "2024-04-09T10:16:02.163026Z"
+     "end_time": "2024-04-11T16:59:15.413765Z",
+     "start_time": "2024-04-11T16:59:15.409757Z"
     }
    },
    "outputs": [],
@@ -670,12 +751,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "b174204c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.183748Z",
-     "start_time": "2024-04-09T10:16:02.180231Z"
+     "end_time": "2024-04-11T16:59:15.436407Z",
+     "start_time": "2024-04-11T16:59:15.432294Z"
     }
    },
    "outputs": [],
@@ -696,12 +777,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "fc16ab5d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.246886Z",
-     "start_time": "2024-04-09T10:16:02.243187Z"
+     "end_time": "2024-04-11T16:59:15.482322Z",
+     "start_time": "2024-04-11T16:59:15.478300Z"
     }
    },
    "outputs": [],
@@ -738,12 +819,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "cbe47776",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.301910Z",
-     "start_time": "2024-04-09T10:16:02.298611Z"
+     "end_time": "2024-04-11T16:59:15.504203Z",
+     "start_time": "2024-04-11T16:59:15.500330Z"
     }
    },
    "outputs": [],
@@ -751,12 +832,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "c30eba87",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-09T10:16:02.319531Z",
-     "start_time": "2024-04-09T10:16:02.316096Z"
+     "end_time": "2024-04-11T16:59:15.568128Z",
+     "start_time": "2024-04-11T16:59:15.561736Z"
     }
    },
    "outputs": [],
