--- a/2) Python Strings Medical Insurance Project/Python Strings Medical Insurance/Python Strings Medical Insurance.ipynb
+++ b/2) Python Strings Medical Insurance Project/Python Strings Medical Insurance/Python Strings Medical Insurance.ipynb
@@ -682,16 +682,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "2e370347",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-11T16:59:15.339368Z",
-     "start_time": "2024-04-11T16:59:15.335607Z"
+     "end_time": "2024-04-11T17:26:40.607120Z",
+     "start_time": "2024-04-11T17:26:40.601558Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for record in medical_records_clean:\n",
+    "    names.append(record[0])\n",
+    "    ages.append(record[1])\n",
+    "    bmis.append(record[2])\n",
+    "    insurance_costs.append(record[3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -705,16 +711,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "72fd0613",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-11T16:59:15.370743Z",
-     "start_time": "2024-04-11T16:59:15.366545Z"
+     "end_time": "2024-04-11T17:28:00.164668Z",
+     "start_time": "2024-04-11T17:28:00.155952Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Isaac Vu', 'Isaac Vu', 'Marina Allison', 'Markus Valdez', 'Connie Ballard', 'Darnell Weber', 'Sylvie Charles', 'Vinay Padilla', 'Meredith Santiago', 'Andre Mccarty', 'Lorena Hodson', 'Isaac Vu', 'Isaac Vu', 'Marina Allison', 'Markus Valdez', 'Connie Ballard', 'Darnell Weber', 'Sylvie Charles', 'Vinay Padilla', 'Meredith Santiago', 'Andre Mccarty', 'Lorena Hodson', 'Isaac Vu', 'Isaac Vu']\n",
+      "['34', '34', '27', '30', '43', '35', '22', '24', '51', '19', '65', '34', '34', '27', '30', '43', '35', '22', '24', '51', '19', '65', '34', '34']\n",
+      "['24.8', '24.8', '31.1', '22.4', '25.3', '20.6', '22.1', '26.9', '29.3', '22.7', '33.1', '24.8', '24.8', '31.1', '22.4', '25.3', '20.6', '22.1', '26.9', '29.3', '22.7', '33.1', '24.8', '24.8']\n",
+      "['$7045.0', '$7045.0', '$7010.0', '$4050.0', '$12060.0', '$7500.0', '$3022.0', '$4620.0', '$16330.0', '$2900.0', '$19370.0', '$7045.0', '$7045.0', '$7010.0', '$4050.0', '$12060.0', '$7500.0', '$3022.0', '$4620.0', '$16330.0', '$2900.0', '$19370.0', '$7045.0', '$7045.0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(names)\n",
+    "print(ages)\n",
+    "print(bmis)\n",
+    "print(insurance_costs)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -728,16 +750,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "303e90dd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-11T16:59:15.413765Z",
-     "start_time": "2024-04-11T16:59:15.409757Z"
+     "end_time": "2024-04-11T17:33:58.781807Z",
+     "start_time": "2024-04-11T17:33:58.777252Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "total_bmi = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -751,16 +775,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "b174204c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-11T16:59:15.436407Z",
-     "start_time": "2024-04-11T16:59:15.432294Z"
+     "end_time": "2024-04-11T17:35:20.781567Z",
+     "start_time": "2024-04-11T17:35:20.773485Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for bmi in bmis:\n",
+    "    total_bmi += float(bmi)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -777,16 +804,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "fc16ab5d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-11T16:59:15.482322Z",
-     "start_time": "2024-04-11T16:59:15.478300Z"
+     "end_time": "2024-04-11T17:37:38.399758Z",
+     "start_time": "2024-04-11T17:37:38.391968Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average BMI: 256.58333333333337\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_bmi = (total_bmi/len(bmis))*10\n",
+    "print(f\"Average BMI: {average_bmi}\")"
+   ]
   },
   {
    "cell_type": "markdown",
